--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,8 @@ tags
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,linux,visualstudiocode,vim
+
+# Custom ignores
+runs/
+wandb/
+data/
